--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   </header>
 
   <section class="hero">
-  <img src="https://cdn.jsdelivr.net/gh/chatgpt-imagecdn/pepethegambler/ptg-presale-hero.png" alt="PepeTheGambler" />
+ <img src="ptg-hero.png" alt="PepeTheGambler" />
 
     <h1>$PTG Presale is Live!</h1>
     <p class="slogan">“The house always memes.”</p>
