--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   </header>
 
   <section class="hero">
- <img src="ptg-hero.png" alt="PepeTheGambler" />
+ <img src="pepe-sitting-on-gold.png" alt="PepeTheGambler sitting on gold, with cards and cigar" />
 
     <h1>$PTG Presale is Live!</h1>
     <p class="slogan">“The house always memes.”</p>
