--- a/index.html
+++ b/index.html
@@ -12,18 +12,28 @@
       background-color: #0b2e1b;
       font-family: 'Inter', sans-serif;
       color: #fffbd8;
+      min-height: 100vh;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
-      text-align: center;
+    }
+    .container {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 3rem;
+      padding: 2rem;
+      flex-wrap: wrap;
+      justify-content: center;
+      text-align: left;
     }
     img {
       max-width: 350px;
       border-radius: 20px;
       box-shadow: 0 0 40px rgba(255, 215, 0, 0.4);
-      margin-bottom: 2rem;
+    }
+    .content {
+      max-width: 400px;
     }
     h1 {
       font-size: 2.5rem;
@@ -35,16 +45,29 @@
       margin-top: 0.5rem;
       color: #b7ffc6;
     }
+    .buy-button {
+      margin-top: 1.5rem;
+      padding: 0.75rem 1.5rem;
+      background-color: #ffd700;
+      border: none;
+      border-radius: 8px;
+      color: #0e3a22;
+      font-size: 1rem;
+      font-weight: bold;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
-  <img src="pepe-sitting-on-gold.png" alt="PepeTheGambler sitting on gold, with cards and cigar" />
-  <h1>PepeTheGambler</h1>
-  <p>The house always memes. The gamble starts here.</p>
+  <div class="container">
+    <img src="pepe-sitting-on-gold.png" alt="PepeTheGambler sitting on gold, with cards and cigar" />
+    <div class="content">
+      <h1>PepeTheGambler</h1>
+      <p>The house always memes. The gamble starts here.</p>
+      <button class="buy-button">Join Presale</button>
+    </div>
+  </div>
 </body>
 </html>
 
-  </section>
-</body>
-</html>
 
