--- a/index.html
+++ b/index.html
@@ -99,9 +99,8 @@
 
 <header>
   <div style="display: flex; align-items: center; justify-content: space-between; max-width: 1200px; margin: 0 auto; padding: 0 1rem;">
-    <div style="display: flex; align-items: center; gap: 0.75rem;">
-  <img src="pepe-the-gambler-logo.png" alt="Pepe The Gambler Logo" style="height: 40px; border-radius: 8px;">
-  <span style="font-size: 1.2rem; font-weight: bold; color: #ffd700; letter-spacing: 0.5px;">PepeTheGambler</span>
+    <div>
+  <img src="pepe-the-gambler-logo.png" alt="Pepe The Gambler Logo" style="height: 80px; border-radius: 10px;">
 </div>
     <nav>
       <a href="#" style="margin-left: 1.5rem; color: #bdfcc7; text-decoration: none; font-weight: 600;">Tokenomics</a>
@@ -147,10 +146,6 @@
 
     updateCountdown();
     setInterval(updateCountdown, 1000);
-  </script>
-</body>
-</html>
-
   </script>
 </body>
 </html>
